# eeprom24x-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: build.yml
ci/: install.sh  script.sh
examples/: linux.rs  linux_trait.rs
src/: eeprom24x.rs  ic.rs  lib.rs  serial_number.rs  slave_addr.rs  storage.rs
tests/: interface.rs  invalid_address.rs  serial_number.rs  storage-interface.rs
tests/common/: mod.rs
