[package]
name = "eeprom24x"
version = "0.6.1"
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/eeprom24x-rs"
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the 24x series serial EEPROMs."
readme = "README.md"
keywords = ["eeprom", "i2c", "driver", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/eeprom24x-rs"
documentation = "https://docs.rs/eeprom24x"
include = [
    "**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2021"

[dependencies]
embedded-hal = "1"
embedded-storage = "0.3.1"

[dev-dependencies]
linux-embedded-hal = "0.4"
embedded-hal-mock = { version = "0.10", features = ["eh1"] }

[profile.release]
lto = true
